--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "mocha": "*"
   },
   "scripts": {
-    "test": "node_modules/.bin/mocha -w"
+    "test": "node_modules/.bin/mocha"
   },
   "repository": {
     "type": "git",
